src/objects/Create_Letter__c.object
<CustomObject>
    <fields>
        <fullName>CC_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CC - Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Item</label>
        <referenceTo>Case_Item__c</referenceTo>
        <relationshipName>Letters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Create_Letters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Method_1__c</fullName>
        <label>Delivery Method 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US Mail</fullName>
                </value>
                <value>
                    <fullName>FAX</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Overnight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Method_2_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Method 2 - Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Method_2__c</fullName>
        <label>Delivery Method 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US Mail</fullName>
                </value>
                <value>
                    <fullName>FAX</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Overnight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Options__c</fullName>
        <label>Delivery Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Overnight</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Image_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Image Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_Name__c</fullName>
        <label>Fulfillment Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Balance_Bill_Letter</fullName>
                </value>
                <value>
                    <fullName>Deductible letter</fullName>
                </value>
                <value>
                    <fullName>Negative confirmation</fullName>
                </value>
                <value>
                    <fullName>Proof of lost coverage</fullName>
                </value>
                <value>
                    <fullName>MNRP Letter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Letter_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pending_Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Tax_Id__c</fullName>
        <description>Required for Provider only and Provider Member only flows for Balance Bill Letter</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Tax Id</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Address_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recipient Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Address_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recipient Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recipient City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Facility_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recipient Facility Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Full_Name__c</fullName>
        <description>Encrypted field populated by WF rule</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Recipient</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recipient Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_MI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recipient MI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recipient First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recipient State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Sub_Type__c</fullName>
        <label>Recipient Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Facility</fullName>
                </value>
                <value>
                    <fullName>Person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recipient_Suffix__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recipient Suffix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Type__c</fullName>
        <label>Recipient Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Producer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recipient_Zip__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recipient Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_on_ActiveX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review on ActiveX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submit_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Submit Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Submitted By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Item_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Work Item ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Fulfillment</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>F-ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfillment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>